WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26696
Member functions in DataGridColumnList should return pointers instead of PassRefPtr
https://bugs.webkit.org/show_bug.cgi?id=26696
Summary
Member functions in DataGridColumnList should return pointers instead of Pass...
David Levin
Reported
2009-06-24 15:26:05 PDT
The PassRefPtr is usually returned to indicate that the ref count is being passed and that isn't the case here. The class still maintains a ref count on these items. (Besides just that general idea, I'm doing this because it helps me get our autogenerated code for v8 bindings building.)
Attachments
Proposed fix.
(3.80 KB, patch)
2009-06-24 15:35 PDT
,
David Levin
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Levin
Comment 1
2009-06-24 15:35:54 PDT
Created
attachment 31814
[details]
Proposed fix.
Dave Hyatt
Comment 2
2009-06-24 15:38:06 PDT
Comment on
attachment 31814
[details]
Proposed fix. r=me
David Levin
Comment 3
2009-06-24 15:48:31 PDT
Committed as
http://trac.webkit.org/changeset/45111
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug