2009-06-24  David Levin  <levin@chromium.org>

Reviewed by David Hyatt.

        Bug 26696: Member functions in DataGridColumnList should return pointers instead of PassRefPtr.
        https://bugs.webkit.org/show_bug.cgi?id=26696

        * html/DataGridColumnList.cpp:
        (WebCore::DataGridColumnList::itemWithName):
        (WebCore::DataGridColumnList::add):
        * html/DataGridColumnList.h:
        (WebCore::DataGridColumnList::item):
        (WebCore::DataGridColumnList::primaryColumn):
        (WebCore::DataGridColumnList::sortColumn):

Canonical link: https://commits.webkit.org/36868@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45111 268f45cc-cd09-0410-ab3c-d52691b4dbfc